<resources>
    <string name="app_name">LightTourism</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_load_screen_activity">LoadScreenActivity</string>
    <string name="new_itinerary">New itinerary</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="city_to_visit">City to visit</string>
    <string name="search">Search</string>
    <string name="flag">Flag</string>
    <string name="your_profile">Your profile :</string>
    <string name="sign_up">sign up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe">subscribe</string>
    <string name="nothing_to_do_here">Nothing to do here</string>
    <string name="no_activity_found">No activity found</string>
    <string name="name_of_the_event">Name of the event</string>
    <string name="log_in">LOG IN</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>