<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/round_corner_appcolor">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo_app"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/username_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:id="@+id/username_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edge_color"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginBottom="200dp"/>

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edge_color"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_profile"
            app:layout_constraintWidth_percent="0.8" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your preferences :"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_factor1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_profile"

            android:layout_marginEnd="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <SeekBar
            android:id="@+id/seekBar_factor1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:max="1"
            android:progress="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_profile"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor2"

            android:layout_marginTop="30dp"
            android:layout_marginStart="150dp"/>

        <SeekBar
            android:id="@+id/seekBar_factor2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor1"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor3"

            android:layout_marginStart="150dp" />

        <SeekBar
            android:id="@+id/seekBar_factor3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:max="1"
            android:progress="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor2"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor4"

            android:layout_marginStart="150dp" />

        <SeekBar
            android:id="@+id/seekBar_factor4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:max="1"
            android:progress="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor3"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor5"

            android:layout_marginStart="150dp" />

        <SeekBar
            android:id="@+id/seekBar_factor5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:max="1"
            android:progress="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor4"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor6"

            android:layout_marginStart="150dp" />

        <SeekBar
            android:id="@+id/seekBar_factor6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:max="1"
            android:progress="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor5"
            app:layout_constraintBottom_toTopOf="@id/login_btn"

            android:layout_marginStart="150dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popularity"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_profile"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor2"

            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:text="Weather"
            android:textColor="@color/blue"

            android:textSize="15sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor3"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:text="Temperature"
            android:textColor="@color/blue"

            android:textSize="15sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor4"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:text="Localisation"
            android:textColor="@color/blue"

            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor5"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:text="Affluence"
            android:textColor="@color/blue"

            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/seekBar_factor6"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor5"
            app:layout_constraintBottom_toTopOf="@id/login_btn"

            android:layout_marginEnd="150dp"
            />



        <Button
            android:id="@+id/signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:background="@drawable/round_corner_appcolor"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor6"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.8"

            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/editFactors_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"

            android:background="@drawable/round_corner_appcolor"
            android:text="set up"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@id/seekBar_factor1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_profile" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:background="@drawable/round_corner_appcolor"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/signup_btn"
            app:layout_constraintTop_toBottomOf="@id/seekBar_factor6"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.8"

            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>